--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ address:
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
 # Build settings
-markdown: kramdown
+# markdown: kramdown
 permalink: pretty
 pygments: true
 exclude: ['config.ru', 'Gemfile', 'Gemfile.lock', 'vendor']
