--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Neil Crosbourne
 email: neilcrosbourne@hotmail.com
 url: https://neilcrosbourne.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Neil Crosbourne portfolio website to show work and completed projects"
 
 # Contact form: comment the line below if you want to stick with the default PHP contact form
 contact: static
